new test case added

--- a/Configurations/config.properties
+++ b/Configurations/config.properties
@@ -1,4 +1,4 @@
-baseURL = https://www.facebook.com
+baseURL = https://www.flipkart.com/
 userName =9542699069
 password = Namo@1234
 chromepath = ./Drivers\\chromedriver.exe
