added new test case and multi browser

--- a/Configurations/config.properties
+++ b/Configurations/config.properties
@@ -1,4 +1,6 @@
 baseURL = https://www.flipkart.com/
 userName =9542699069
-password = Namo@1234
+password = Namo@12345
 chromepath = ./Drivers\\chromedriver.exe
+ffpath = ./Drivers\\geckodriver.exe
+
