committing latest changes

--- a/Configurations/config.properties
+++ b/Configurations/config.properties
@@ -1,5 +1,5 @@
-baseURL = https://www.flipkart.com/
-userName =9542699069
+baseURL = https://www.nopcommerce.com/
+userName =anjibabu
 password = Namo@12345
 chromepath = ./Drivers\\chromedriver.exe
 ffpath = ./Drivers\\geckodriver.exe
